<resources>
    <string name="app_name">ALC-4-Phase1</string>
    <string name="welcomeMessage">Welcome to ALC 4.0</string>
    <string name="about">About ALC</string>
    <string name="track">Track:</string>
    <string name="country">Country:</string>
    <string name="email">Email:</string>
    <string name="phoneNumber">Phone Number:</string>
    <string name="profile">My Profile</string>
    <string name="slackUsername">Slack Username:</string>

</resources>
